--- a/ToDoList-Code/style.css
+++ b/ToDoList-Code/style.css
@@ -3,10 +3,14 @@
 	--darker: #1F2937;
 	--darkest: #111827;
 	--grey: #6B7280;
-	--pink: #EC4899;
-	--purple: #8B5CF6;
-	--light: #EEE;
+	--fern: #424530;
+	--apricot: #E09132;
+	--natural: #A58E74;
+	--warmIvory: #FFEFCD;
+	--light: #FFF;
 }
+
+
 
 * {
 	margin: 0;
@@ -14,26 +18,36 @@
 	font-family: "Fira sans", sans-serif;
 }
 
-body {
-	display: flex;
-	flex-direction: column;
-	min-height: 100vh;
-	color: #FFF;
-	background-color: var(--dark);
-}
-
-header {
-	padding: 2rem 1rem;
+main {
+	flex: 1 1 0%;
 	max-width: 800px;
 	width: 100%;
 	margin: 0 auto;
 }
 
+body {
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
+	color: #FFF;
+	background-color: var(--fern);
+}
+
+header {
+	text-align: center;
+	padding: 2rem 1rem;
+	max-width: 800px;
+	width: 100%;
+	margin: 0 auto;
+	backdrop-filter: blur(30px);
+}
+
 header h1{ 
 	font-size: 2.5rem;
 	font-weight: 300;
-	color: var(--grey);
+	color: var(--apricot);
 	margin-bottom: 1rem;
+	padding: 3px;
 }
 
 #new-task-form {
@@ -49,25 +63,27 @@ input, button {
 
 #new-task-input {
 	flex: 1 1 0%;
-	background-color: var(--darker);
+	background: var(--apricot);
 	padding: 1rem;
 	border-radius: 1rem;
 	margin-right: 1rem;
-	color: var(--light);
 	font-size: 1.25rem;
+    position: relative;
+    z-index: 1;
+    backdrop-filter: blur(60px);
+    border: solid 1.75px transparent;
+	color: var(--fern);
 }
 
 #new-task-input::placeholder {
-	color: var(--grey);
+	color: var(--fern);
 }
 
 #new-task-submit {
-	color: var(--pink);
+	color: var(--apricot);
 	font-size: 1.25rem;
 	font-weight: 700;
-	background-image: linear-gradient(to right, var(--pink), var(--purple));
-	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
+	color: var(--warmIvory);
 	cursor: pointer;
 	transition: 0.4s;
 }
@@ -80,13 +96,6 @@ input, button {
 	opacity: 0.6;
 }
 
-main {
-	flex: 1 1 0%;
-	max-width: 800px;
-	width: 100%;
-	margin: 0 auto;
-}
-
 .task-list {
 	padding: 1rem;
 }
@@ -94,25 +103,29 @@ main {
 .task-list h2 {
 	font-size: 1.5rem;
 	font-weight: 300;
-	color: var(--grey);
+	color: var(--apricot);
 	margin-bottom: 1rem;
+	padding: 1px;
+	text-shadow: 0.2px .2px .2px var(--apricot);
 }
 
 #tasks .task {
 	display: flex;
 	justify-content: space-between;
-	background-color: var(--darkest);
+	background: var(--natural);
 	padding: 1rem;
 	border-radius: 1rem;
-	margin-bottom: 1rem;
+    border: solid 1px transparent;
+    background-clip: padding-box;
+	box-sizing: 10px;
 }
 
 .task .content {
-	flex: 1 1 0%;
+	flex: 3 3 0%;
 }
 
 .task .content .text {
-	color: var(--light);
+	color: var(--warmIvory);
 	font-size: 1.125rem;
 	width: 100%;
 	display: block;
@@ -120,7 +133,7 @@ main {
 }
 
 .task .content .text:not(:read-only) {
-	color: var(--pink);
+	color: var(--fern);
 }
 
 .task .actions {
@@ -146,13 +159,13 @@ main {
 }
 
 .task .actions .edit {
-	background-image: linear-gradient(to right, var(--pink), var(--purple));
+	background-color: var(--warmIvory);
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
 }
 
 .task .actions .delete {
-	background-image: linear-gradient(to right, var(--pink), crimson);
+	background-color: var(--apricot);
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
 }
